# pulsar-dreamcast-ble

./: .embed.toml  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  check.sh  dreamcast_ble_adapter_project.md  memory.x
.cargo/: config.toml
.github/workflows/: ci.yml
3d_files/: README.md  cable_hole_plug.stl
dc-protocol/src/: controller_state.rs  hid.rs  packet.rs
docs/: battery_optimization.md  bill_of_materials.md  debug_log.md  dk_debug_log.md  learnings.md  maple_bus_protocol.md  test_plan.md  users_guide.md  xiao_debug_log.md
docs/images/: README.md
docs/wiring/: dc_wiring.fzz
examples/: blinky.rs  maple_device_info.rs
src/: button.rs  config.rs  lib.rs  main.rs  maple.rs  panic_handler.rs  state.rs
src/ble/: flash_bond.rs  hid.rs  mod.rs  security.rs  softdevice.rs  task.rs
src/board/: dk.rs  mod.rs  nrf52840.rs  xiao.rs
src/maple/: bus.rs  controller_state.rs  gpio_bus.rs  host.rs  mock_bus.rs  packet.rs  state_machine.rs  traits.rs
src/state/: controller.rs
