[package]
name = "embedded_rust_setup"
version = "0.1.0"
edition = "2024"

# [dependencies]
# cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
# # cortex-m-rt = "0.7.5"
# embedded-hal = "1.0.0"
# nrf52840-dk-bsp = "0.2.0"
# nrf52840-hal = "0.18.0"
# nrf52840-pac = "0.12.2"
# panic-halt = "1.0.0"
# rtt-target = "0.6.1"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = ">=0.6, <0.8"
embedded-hal = "0.2"
nrf52840-hal = "0.13.0"
nrf52840-dk-bsp = "0.2.0"
panic-halt = "1.0.0"
nb = "1.0.0"


[dev-dependencies]
cortex-m-rt = ">=0.6, <0.8"
nb = "1.0.0"
panic-halt = "0.2.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }

[features]
rt = ["nrf52840-hal/rt"]
default = ["rt"]
